--- a/building_a_sanitization_pipeline.ipynb
+++ b/building_a_sanitization_pipeline.ipynb
@@ -2,109 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "  \n",
-      "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
-      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "  \u001b[31m╰─>\u001b[0m \u001b[31m[1 lines of output]\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m error in anonympy setup command: 'python_requires' must be a string containing valid version specifiers; Invalid specifier: '>=3.6*'\n",
-      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
-      "  \n",
-      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
-      "\n",
-      "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
-      "\u001b[31m╰─>\u001b[0m See above for output.\n",
-      "\n",
-      "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
-      "\u001b[1;36mhint\u001b[0m: See above for details.\n",
-      "Collecting en-core-web-lg==3.5.0\n",
-      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0-py3-none-any.whl (587.7 MB)\n",
-      "\u001b[2K     \u001b[91m━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m144.3/587.7 MB\u001b[0m \u001b[31m45.2 MB/s\u001b[0m eta \u001b[36m0:00:10\u001b[0m\n",
-      "\u001b[?25h\u001b[31mERROR: Exception:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 438, in _error_catcher\n",
-      "    yield\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 561, in read\n",
-      "    data = self._fp_read(amt) if not fp_closed else b\"\"\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 527, in _fp_read\n",
-      "    return self._fp.read(amt) if amt is not None else self._fp.read()\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_vendor/cachecontrol/filewrapper.py\", line 94, in read\n",
-      "    self.__buf.write(data)\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/tempfile.py\", line 483, in func_wrapper\n",
-      "    return func(*args, **kwargs)\n",
-      "OSError: [Errno 28] No space left on device\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
+      "\u001b[31mERROR: Could not install packages due to an OSError: [Errno 28] No space left on device\n",
+      "\u001b[0m\u001b[31m\n",
+      "\u001b[0mCollecting en-core-web-lg==3.5.0\n",
+      "\u001b[31mERROR: Could not install packages due to an OSError: [Errno 28] No space left on device: '/var/folders/ly/b_rl0knd27n_wy81pqqqp8q40000gn/T/tmpxlhnr4z0'\n",
+      "\u001b[0m\u001b[31m\n",
+      "\u001b[0mfatal: destination path 'open-data-anonimizer' already exists and is not an empty directory.\n",
+      "\u001b[31mERROR: Exception:\n",
       "Traceback (most recent call last):\n",
       "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/cli/base_command.py\", line 169, in exc_logging_wrapper\n",
       "    status = run_func(*args)\n",
       "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/cli/req_command.py\", line 248, in wrapper\n",
       "    return func(self, options, args)\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/commands/install.py\", line 377, in run\n",
-      "    requirement_set = resolver.resolve(\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/resolution/resolvelib/resolver.py\", line 73, in resolve\n",
-      "    collected = self.factory.collect_root_requirements(root_reqs)\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/resolution/resolvelib/factory.py\", line 491, in collect_root_requirements\n",
-      "    req = self._make_requirement_from_install_req(\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/resolution/resolvelib/factory.py\", line 453, in _make_requirement_from_install_req\n",
-      "    cand = self._make_candidate_from_link(\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/resolution/resolvelib/factory.py\", line 206, in _make_candidate_from_link\n",
-      "    self._link_candidate_cache[link] = LinkCandidate(\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/resolution/resolvelib/candidates.py\", line 293, in __init__\n",
-      "    super().__init__(\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/resolution/resolvelib/candidates.py\", line 156, in __init__\n",
-      "    self.dist = self._prepare()\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/resolution/resolvelib/candidates.py\", line 225, in _prepare\n",
-      "    dist = self._prepare_distribution()\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/resolution/resolvelib/candidates.py\", line 304, in _prepare_distribution\n",
-      "    return preparer.prepare_linked_requirement(self._ireq, parallel_builds=True)\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/operations/prepare.py\", line 516, in prepare_linked_requirement\n",
-      "    return self._prepare_linked_requirement(req, parallel_builds)\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/operations/prepare.py\", line 587, in _prepare_linked_requirement\n",
-      "    local_file = unpack_url(\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/operations/prepare.py\", line 166, in unpack_url\n",
-      "    file = get_http_url(\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/operations/prepare.py\", line 107, in get_http_url\n",
-      "    from_path, content_type = download(link, temp_dir.path)\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/network/download.py\", line 147, in __call__\n",
-      "    for chunk in chunks:\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/cli/progress_bars.py\", line 53, in _rich_progress_bar\n",
-      "    for chunk in iterable:\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/network/utils.py\", line 63, in response_chunks\n",
-      "    for chunk in response.raw.stream(\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 622, in stream\n",
-      "    data = self.read(amt=amt, decode_content=decode_content)\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 560, in read\n",
-      "    with self._error_catcher():\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/contextlib.py\", line 153, in __exit__\n",
-      "    self.gen.throw(typ, value, traceback)\n",
-      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 455, in _error_catcher\n",
-      "    raise ProtocolError(\"Connection broken: %r\" % e, e)\n",
-      "pip._vendor.urllib3.exceptions.ProtocolError: (\"Connection broken: OSError(28, 'No space left on device')\", OSError(28, 'No space left on device'))\u001b[0m\u001b[31m\n",
-      "\u001b[0mCloning into 'open-data-anonimizer'...\n",
-      "remote: Enumerating objects: 3112, done.\u001b[K\n",
-      "remote: Counting objects: 100% (3112/3112), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (1467/1467), done.\u001b[K\n",
-      "remote: Total 3112 (delta 1570), reused 3076 (delta 1550), pack-reused 0\u001b[K\n",
-      "Receiving objects: 100% (3112/3112), 41.13 MiB | 17.04 MiB/s, done.\n",
-      "Resolving deltas: 100% (1570/1570), done.\n",
-      "Updating files: 100% (671/671), done.\n",
-      "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\u001b[0m\u001b[31m\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/commands/install.py\", line 333, in run\n",
+      "    build_tracker = self.enter_context(get_build_tracker())\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/cli/command_context.py\", line 27, in enter_context\n",
+      "    return self._main_context.enter_context(context_provider)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/contextlib.py\", line 492, in enter_context\n",
+      "    result = _cm_type.__enter__(cm)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/contextlib.py\", line 135, in __enter__\n",
+      "    return next(self.gen)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/operations/build/build_tracker.py\", line 46, in get_build_tracker\n",
+      "    root = ctx.enter_context(TempDirectory(kind=\"build-tracker\")).path\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/utils/temp_dir.py\", line 125, in __init__\n",
+      "    path = self._create(kind)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/utils/temp_dir.py\", line 164, in _create\n",
+      "    path = os.path.realpath(tempfile.mkdtemp(prefix=f\"pip-{kind}-\"))\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/tempfile.py\", line 357, in mkdtemp\n",
+      "    prefix, suffix, dir, output_type = _sanitize_params(prefix, suffix, dir)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/tempfile.py\", line 126, in _sanitize_params\n",
+      "    dir = gettempdir()\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/tempfile.py\", line 299, in gettempdir\n",
+      "    return _os.fsdecode(_gettempdir())\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/tempfile.py\", line 292, in _gettempdir\n",
+      "    tempdir = _get_default_tempdir()\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/tempfile.py\", line 223, in _get_default_tempdir\n",
+      "    raise FileNotFoundError(_errno.ENOENT,\n",
+      "FileNotFoundError: [Errno 2] No usable temporary directory found in ['/var/folders/ly/b_rl0knd27n_wy81pqqqp8q40000gn/T/', '/tmp', '/var/tmp', '/usr/tmp', '/Users/grahamwaters/Movies/GenAI_onRails']\u001b[0m\u001b[31m\n",
       "\u001b[0mmake: *** No rule to make target `bootstrap'.  Stop.\n",
-      "Collecting cape-privacy==0.3.0\n",
-      "  Downloading cape_privacy-0.3.0-py3-none-any.whl (48 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m48.1/48.1 kB\u001b[0m \u001b[31m857.3 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: cape-privacy\n",
-      "Successfully installed cape-privacy-0.3.0\n"
+      "\u001b[31mERROR: Exception:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/cli/base_command.py\", line 169, in exc_logging_wrapper\n",
+      "    status = run_func(*args)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/cli/req_command.py\", line 248, in wrapper\n",
+      "    return func(self, options, args)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/commands/install.py\", line 333, in run\n",
+      "    build_tracker = self.enter_context(get_build_tracker())\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/cli/command_context.py\", line 27, in enter_context\n",
+      "    return self._main_context.enter_context(context_provider)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/contextlib.py\", line 492, in enter_context\n",
+      "    result = _cm_type.__enter__(cm)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/contextlib.py\", line 135, in __enter__\n",
+      "    return next(self.gen)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/operations/build/build_tracker.py\", line 46, in get_build_tracker\n",
+      "    root = ctx.enter_context(TempDirectory(kind=\"build-tracker\")).path\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/utils/temp_dir.py\", line 125, in __init__\n",
+      "    path = self._create(kind)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/site-packages/pip/_internal/utils/temp_dir.py\", line 164, in _create\n",
+      "    path = os.path.realpath(tempfile.mkdtemp(prefix=f\"pip-{kind}-\"))\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/tempfile.py\", line 357, in mkdtemp\n",
+      "    prefix, suffix, dir, output_type = _sanitize_params(prefix, suffix, dir)\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/tempfile.py\", line 126, in _sanitize_params\n",
+      "    dir = gettempdir()\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/tempfile.py\", line 299, in gettempdir\n",
+      "    return _os.fsdecode(_gettempdir())\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/tempfile.py\", line 292, in _gettempdir\n",
+      "    tempdir = _get_default_tempdir()\n",
+      "  File \"/Users/grahamwaters/Movies/GenAI_onRails/.conda/lib/python3.10/tempfile.py\", line 223, in _get_default_tempdir\n",
+      "    raise FileNotFoundError(_errno.ENOENT,\n",
+      "FileNotFoundError: [Errno 2] No usable temporary directory found in ['/var/folders/ly/b_rl0knd27n_wy81pqqqp8q40000gn/T/', '/tmp', '/var/tmp', '/usr/tmp', '/Users/grahamwaters/Movies/GenAI_onRails']\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
      ]
     }
    ],
